# compiler-crates

./: .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md  dprint.json
.github/workflows/: ci.yml  docs.yml
ariadne/: Cargo.toml
ariadne/src/: lib.rs  main.rs
bitflags/: Cargo.toml
bitflags/src/: lib.rs  main.rs
bumpalo/: Cargo.toml
bumpalo/src/: lib.rs
chumsky/: Cargo.toml
chumsky/src/: lib.rs  main.rs
codespan/: Cargo.toml
codespan-reporting/: Cargo.toml
codespan-reporting/src/: lib.rs  main.rs
codespan/src/: lib.rs  main.rs
combine/: Cargo.toml
combine/examples/: simple.rs  test.rs
combine/src/: lib.rs
cranelift/: Cargo.toml
cranelift/src/: lib.rs  main.rs
docs/: book.toml
docs/src/: SUMMARY.md  ariadne.md  bitflags.md  bumpalo.md  chumsky.md  codespan-reporting.md  codespan.md  combine.md  cranelift.md  custom.css  dynasm.md  favicon.js  id-arena.md  indexmap.md  inkwell.md  introduction.md  lalrpop.md  logos.md  malachite.md  marginalia.md  melior.md  miette.md  (+20 more)
dynasm/: Cargo.toml
id-arena/: Cargo.toml
indexmap/: Cargo.toml
inkwell/: Cargo.toml
lalrpop/: Cargo.toml
logos/: Cargo.toml
marginalia/: Cargo.toml
melior/: Cargo.toml
miette/: Cargo.toml
nom/: Cargo.toml
nom-locate/: Cargo.toml
offsides/: Cargo.toml
peg/: Cargo.toml
pest/: Cargo.toml
petgraph/: Cargo.toml
quote/: Cargo.toml
rowan/: Cargo.toml
rust_sitter/: Cargo.toml
rustc_lexer/: Cargo.toml
rustyline/: Cargo.toml
smallvec/: Cargo.toml
symbol_table/: Cargo.toml
syn/: Cargo.toml
thiserror/: Cargo.toml
winnow/: Cargo.toml
(+49 files in other folders)
